@@ -331,4 +331,5 @@ BUGFIXES:
 311 ==> 424679 - Windows installer erroneously requires accepting the GPL.
 312 ==> 436532 - digiKam translation of "Behavior" not possible.
 313 ==> 403267 - digiKam is not reading tags from DNG images when sidecars are present.
-314 ==> 
+314 ==> 437072 - digiKam does not start.
+315 ==> 
